# what-Todo

./: :w  Cargo.toml  README.md  \  flake.nix
cli_interface/: Cargo.toml
cli_interface/src/: cli.rs  config.rs  fs_management.rs  lib.rs  ls.rs  main.rs  navigation.rs  parser.rs  pod.rs  pretty_print.rs  startup.rs  utils.rs  virtual_workspace.rs
cli_interface/src/action/: ls.rs  open.rs
cli_interface/src/cli/: app_toml.rs  command.rs  config.rs  launch_check.rs
cli_interface/src/parser/: comment_parser.rs  parser.rs  todo_parser.rs
cli_interface/src/parser/comment_parser/: iterators.rs
cli_interface/src/utilz/: app_path.rs
project_navigator/: Cargo.toml
project_navigator/folder_test/: test1.txt  test2.txt
project_navigator/src/: lib.rs
src/: main.rs  navigation.rs
src/action/: ls.rs  mod.rs  open.rs
src/cli/: command.rs  error.rs  mod.rs
src/configuration/: config.rs  error.rs  mod.rs  regex_config.rs  workspace_config.rs
src/parser/: automata.rs  file_automata.rs  mod.rs
todo_searcher/: Cargo.toml  README.md
todo_searcher/src/: comment_parser.rs  iteration.rs  lib.rs  parser.rs  todo.rs  todo_parser.rs
todo_searcher/src/comment_parser/: iterators.rs
todo_searcher/tests/: todo_test.rs
