[package]
name = "what-todo"
version = "0.1.0"
edition = "2024"

[dependencies]
regex-automata = {version = "0.4.9", features = ["std","dfa-search","unicode","hybrid", "nfa"]}
clap = { version = "4.5", features = ["derive"] }
serde= { version="1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.3"

walkdir = "2"
ignore ="0.4"
rayon = "1.10"
comfy-table ="7"

