[package]
name = "cli_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
#regex engine
miniregex = {path = "../../miniregex"}
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
#logger
log  = "0.4"
env_logger = "0.11"
#dir manipulation
walkdir = "2"
ignore ="0.4"
rayon = "1.10"
# data formating
comfy-table ="7"
#cli building
clap = { version = "4.5", features = ["derive"] }
